--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,3 +1,4 @@
 {
-    "sisidev-info-text": "Development of corporate websites and online stores"
+    "sisidev-info-text": "Development of corporate websites and online stores",
+    "top-label": "✨ top order "
 }
