--- a/i18n/locales/uk.json
+++ b/i18n/locales/uk.json
@@ -1,3 +1,4 @@
 {
-    "sisidev-info-text": "Розробка корпоративних сайтів та інтернет магазинів"
+    "sisidev-info-text": "Розробка корпоративних сайтів та інтернет магазинів",
+    "top-label": "✨ топ замовлень "
 }
