sticky media block + modal form

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
     "sisidev-info-text": "Development of corporate websites and online stores",
-    "top-label": "✨ top order "
+    "top-label": "✨ top order",
+    "close_btn": "Close"
 }
