--- a/i18n/locales/uk.json
+++ b/i18n/locales/uk.json
@@ -1,4 +1,5 @@
 {
     "sisidev-info-text": "Розробка корпоративних сайтів та інтернет магазинів",
-    "top-label": "✨ топ замовлень "
+    "top-label": "✨ топ замовлень",
+    "close_btn": "Закрити"
 }
