--- a/i18n/locales/uk.json
+++ b/i18n/locales/uk.json
@@ -1,5 +1,12 @@
 {
     "sisidev-info-text": "Розробка корпоративних сайтів та інтернет магазинів",
     "top-label": "✨ топ замовлень",
-    "close_btn": "Закрити"
+    "close_btn": "Закрити",
+    "contacts": {
+        "item1": "Пишіть нам за адресою:",
+        "item2": "Ми на звʼязку:",
+        "item3": "Слідкуйте за нами в соцмережах:",
+        "item4": "Напишіть нам",
+        "item5": "Адреса:"
+    }
 }
