--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,5 +1,12 @@
 {
     "sisidev-info-text": "Development of corporate websites and online stores",
     "top-label": "✨ top order",
-    "close_btn": "Close"
+    "close_btn": "Close",
+    "contacts": {
+        "item1": "Write to us at:",
+        "item2": "We are in touch:",
+        "item3": "Follow us on social networks:",
+        "item4": "Write to us",
+        "item5": "Address:"
+    }
 }
