--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -2,6 +2,7 @@
     "sisidev-info-text": "Development of corporate websites and online stores",
     "top-label": "✨ top order",
     "close_btn": "Close",
+    "back": "Back",
     "contacts": {
         "item1": "Write to us at:",
         "item2": "We are in touch:",
