--- a/i18n/locales/uk.json
+++ b/i18n/locales/uk.json
@@ -2,6 +2,7 @@
     "sisidev-info-text": "Розробка корпоративних сайтів та інтернет магазинів",
     "top-label": "✨ топ замовлень",
     "close_btn": "Закрити",
+    "back": "Назад",
     "contacts": {
         "item1": "Пишіть нам за адресою:",
         "item2": "Ми на звʼязку:",
